# KafPy

./: .gitignore  BENCHMARK-METHODOLOGY.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TUNING.md  idea.md  mkdocs.yml  pyproject.toml
.github/workflows/: preview-deployment.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md  v1.8-MILESTONE-AUDIT.md  v1.8-REQUIREMENTS.md  v1.8-ROADMAP.md  v1.9-REQUIREMENTS.md  v1.9-ROADMAP.md  v1.9-STATE.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.0-STATE.md
.planning/phases/01-architecture-document/: 01-PLAN.md  01-REVIEW-FIX.md  01-REVIEW.md  01-UAT.md  01-VERIFICATION.md  01-architecture-document-SUMMARY.md  CONTEXT.md  RESEARCH.md
.planning/phases/01-core-consumer-engine-configuration/: 01-PLAN.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/01-extract-duplication/: 01-01-PLAN.md  01-01-SUMMARY.md  VERIFICATION.md
.planning/phases/02-rebalance-handling-failure-handling-lifecycle/: 02-PLAN.md  02-RESEARCH.md  02-SUMMARY.md  02-VALIDATION.md  02.1-SUMMARY.md  02.2-SUMMARY.md  02.3-SUMMARY.md  02.4-SUMMARY.md  02.5-SUMMARY.md  02.6-SUMMARY.md
.planning/phases/02-split-worker-pool/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: benchmark.md  best-practices.md  configuration.md  consumer.md  error-handling.md  getting-started.md  handlers.md  index.md  installation.md  routing.md  use-cases.md
docs/api/: kafpy.md
docs/architecture/: index.md  message-flow.md  modules.md  overview.md  pyboundary.md  routing.md  state-machines.md
docs/contributing/: conventions.md  setup.md
kafpy/: __init__.py  _kafpy.pyi  benchmark.py  config.py  consumer.py  exceptions.py  handlers.py  runtime.py
kafpy/guides/: __init__.py  configuration.md  error-handling.md  getting-started.md  handler-patterns.md
src/: config.rs  consume.rs  error.rs  errors.rs  kafka_message.rs  lib.rs  logging.rs  message_processor.rs  produce.rs  pyconfig.rs  pyconsumer.rs  rayon_pool.rs
src/benchmark/: hardening.rs  measurement.rs  mod.rs  output.rs  results.rs  runner.rs  scenarios.rs
src/consumer/: config.rs  context.rs  error.rs  message.rs  mod.rs  runner.rs
src/coordinator/: commit_task.rs  error.rs  mod.rs  offset_coordinator.rs  offset_tracker.rs  retry_coordinator.rs
src/dispatcher/: backpressure.rs  consumer_dispatcher.rs  error.rs  mod.rs  queue_manager.rs
src/dlq/: metadata.rs  mod.rs  produce.rs  router.rs
src/failure/: classifier.rs  logging.rs  mod.rs  reason.rs  tests.rs
src/middleware/: chain.rs  logging.rs  metrics.rs  mod.rs  python.rs  traits.rs
src/observability/: config.rs  kafka_metrics.rs  metrics.rs  mod.rs  prometheus.rs  runtime_snapshot.rs  tracing.rs
src/offset/: commit_task.rs  mod.rs  offset_coordinator.rs  offset_tracker.rs
src/python/: async_bridge.rs  batch.rs  context.rs  execution_result.rs  executor.rs  handler.rs  logger.rs  mod.rs  streaming.rs
src/retry/: mod.rs  policy.rs  retry_coordinator.rs
src/routing/: chain.rs  config.rs  context.rs  decision.rs  header.rs  key.rs  mod.rs  python_router.rs  router.rs  topic_pattern.rs
src/runtime/: builder.rs  mod.rs
src/shutdown/: mod.rs  shutdown.rs
src/worker_pool/: accumulator.rs  batch_loop.rs  concurrency.rs  fan_out.rs  mod.rs  pool.rs  state.rs  streaming_loop.rs  worker.rs
tests/: builder_test.rs  dispatcher_test.rs  test_exceptions.py
(+258 files in other folders)
