[package]
name = "KafPy"
version = "0.1.0"
edition = "2021"
authors = ["Dang Van Nghiem <vannghiem848@gmail.com>"]
description = "High-performance Rust Kafka consumer"

[lib]
name = "_kafpy"
crate-type = ["cdylib", "rlib"]

[dependencies]

pyo3 = { version = "0.27.2", features = ["extension-module", "generate-import-lib"] }
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7.17"
async-trait = "0.1"
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
thiserror = "2.0.17"
glob = "0.3"
regex = "1"
parking_lot = "0.12"
metrics = "0.24"
prometheus-client = "0.24"
opentelemetry = "0.26"
opentelemetry-otlp = "0.17"
tracing-opentelemetry = "0.31"
tracing-log = "0.2"
opentelemetry_sdk = { version = "0.26", features = ["trace"] }
num_cpus = "1.16"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

# T-digest for accurate high-percentile computation
tdigest = "0.2"

[target.'cfg(unix)'.dependencies]
rdkafka = { version = "0.38" }

[target.'cfg(windows)'.dependencies]
rdkafka = { version = "0.38", features = ["cmake-build"] }

[dependencies.async-stream]
version = "0.3"

[dependencies.futures-util]
version = "0.3"

[dependencies.tokio-stream]
version = "0.1"
features = ["sync"]

[build-dependencies]
pyo3-build-config = "=0.27.2"

[package.metadata.maturin]
name = "kafpy"
python-source = "kafpy"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = true

[dev-dependencies]
serde_json = "1.0"